[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/ResolutionPopup.gd" type="Script" id=1]
[ext_resource path="res://assets/menu/label_1920x1080.png" type="Texture" id=2]
[ext_resource path="res://assets/menu/pointer.png" type="Texture" id=3]
[ext_resource path="res://assets/menu/label_1280x720.png" type="Texture" id=4]
[ext_resource path="res://assets/menu/label_1600x900.png" type="Texture" id=5]
[ext_resource path="res://assets/menu/label_1024x546.png" type="Texture" id=6]
[ext_resource path="res://assets/menu/label_back.png" type="Texture" id=7]

[node name="ResolutionPopup" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1025.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.392157 )

[node name="Res1024x546" type="TextureRect" parent="."]
margin_left = 200.0
margin_top = -45.0
margin_right = 712.0
margin_bottom = 467.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 6 )

[node name="Res1280x720" type="TextureRect" parent="."]
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
margin_left = 485.0
margin_top = -45.0
margin_right = 997.0
margin_bottom = 467.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )

[node name="Res1600x900" type="TextureRect" parent="."]
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
margin_left = 200.0
margin_top = 155.0
margin_right = 712.0
margin_bottom = 667.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )

[node name="Res1920x1080" type="TextureRect" parent="."]
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
margin_left = 485.0
margin_top = 155.0
margin_right = 997.0
margin_bottom = 667.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )

[node name="Back" type="TextureRect" parent="."]
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
margin_left = 340.0
margin_top = 325.0
margin_right = 852.0
margin_bottom = 837.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="Pointer" type="Sprite" parent="."]
position = Vector2( 400, 140 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )
